--- a/pengurus.html
+++ b/pengurus.html
@@ -16,7 +16,6 @@
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Custom styles for this template -->
     <link href="css/one-page-wonder.css" rel="stylesheet">
@@ -51,31 +50,8 @@
     <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="masthead-heading mb-0">Klub Buku Yogyakarta</h1>
-          <h2 class="masthead-subheading mb-0">Dari Yogya, dengan buku kita rangkul dunia!</h2>
+          <h2 class="masthead-subheading mb-0">Kutu di belakang KBY</h2>
           <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5" onclick="swal('Detail prosedur bergabung ke grup whatsapp')">Gabung</a>
-        </div>
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-2">
-              <div class="p-5">
-                <img class="img-fluid rounded-circle" src="img/kby-logo.jpg" alt="">
-              </div>
-            </div>
-            <div class="col-lg-6 order-lg-1">
-              <div class="p-5">
-                <p>
-                Klub Buku Yogyakarta sebuah komunitas yang beranggotakan orang-orang yang menjadikan membaca sebagai kegemarannya. Klub Buku Yogyakarta pertama kali hadir dan memeriahkan ranah pertwitteran pada April 2012. Dan hingga saat ini, setelah berusia hampir 6 tahun, follower Klub Buku Yogya sudah mencapai 1300an orang.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="row" style="display:block;margin-top:50px;text-align:center;font-size:50px;color:white;">
-                  <a href="#" class="fa fa-facebook"></a>
-                  <a href="#" class="fa fa-twitter"></a>
-                  <a href="#" class="fa fa-instagram"></a>
-                  <a href="#" class="fa fa-whatsapp"></a>
-          </div>
         </div>
       </div>
 
@@ -84,6 +60,61 @@
       <div class="bg-circle-3 bg-circle"></div>
       <div class="bg-circle-4 bg-circle"></div>
     </header>
+
+    <section>
+      <div class="container" style="margin-top:50px">
+        <div class="row align-items-center">
+          <div class="col-lg-3">
+            <div class="p-2">
+              <img class="img-fluid rounded-circle" src="img/team01.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="p-5">
+              <h2 class="display-4">Matilda</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-3">
+            <div class="p-2">
+              <img class="img-fluid rounded-circle" src="img/team02.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="p-5">
+              <h2 class="display-4">Dobby</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-3">
+            <div class="p-2">
+              <img class="img-fluid rounded-circle" src="img/team03.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="p-5">
+              <h2 class="display-4">Mithrandir</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
