--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="./">Klub Buku Yogyakarta</a>
+        <a class="navbar-brand" href="./index.html">Klub Buku Yogyakarta</a>
         <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
