--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
       <div class="container">
+        <img src="./img/kby-logo-blue.jpg" style="height:50px;margin-right:15px;">
         <a class="navbar-brand" href="./index.html">Klub Buku Yogyakarta</a>
         <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -59,7 +60,7 @@
           <div class="row align-items-center">
             <div class="col-lg-6 order-lg-2">
               <div class="p-5">
-                <img class="img-fluid rounded-circle" src="img/kby-logo.jpg" alt="">
+                <img class="img-fluid rounded-circle" src="img/grantdraws02.jpg" alt="">
               </div>
             </div>
             <div class="col-lg-6 order-lg-1">
