--- a/program.html
+++ b/program.html
@@ -27,6 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
       <div class="container">
+        <img src="./img/kby-logo-blue.jpg" style="height:50px;margin-right:15px;">
         <a class="navbar-brand" href="./index.html">Klub Buku Yogyakarta</a>
         <button class="navbar-light navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
